--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "electron": "^3.0.7"
   },
   "dependencies": {
-    "save-svg-as-png": "^1.4.6",
-    "svg-to-img": "^2.0.8"
+    "adm-zip": "^0.4.13",
+    "svg-to-img": "^2.0.8",
+    "temp-dir": "^1.0.0"
   }
 }
